@@ -1,4 +1,4 @@
-.Dd January 7, 2013
+.Dd January 10, 2013
 .Dt libevtx 3
 .Os libevtx
 .Sh NAME
@@ -72,7 +72,87 @@ Available when compiled with wide character string support:
 Available when compiled with libbfio support:
 .Ft int
 .Fn libevtx_file_open_file_io_handle "libevtx_file_t *file, libbfio_handle_t *file_io_handle, int flags, libevtx_error_t **error"
+.Pp
+Record functions
+.Ft int
+.Fn libevtx_record_free "libevtx_record_t **record, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_offset "libevtx_record_t *record, off64_t *offset, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_identifier "libevtx_record_t *record, uint32_t *identifier, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_written_time "libevtx_record_t *record, uint32_t *written_time, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_event_identifier "libevtx_record_t *record, uint32_t *event_identifier, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_event_identifier_qualifiers "libevtx_record_t *record, uint32_t *event_identifier_qualifiers, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_event_level "libevtx_record_t *record, uint8_t *event_level, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_provider_identifier_size "libevtx_record_t *record, size_t *utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_provider_identifier "libevtx_record_t *record, uint8_t *utf8_string, size_t utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_provider_identifier_size "libevtx_record_t *record, size_t *utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_provider_identifier "libevtx_record_t *record, uint16_t *utf16_string, size_t utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_source_name_size "libevtx_record_t *record, size_t *utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_source_name "libevtx_record_t *record, uint8_t *utf8_string, size_t utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_source_name_size "libevtx_record_t *record, size_t *utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_source_name "libevtx_record_t *record, uint16_t *utf16_string, size_t utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_computer_name_size "libevtx_record_t *record, size_t *utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_computer_name "libevtx_record_t *record, uint8_t *utf8_string, size_t utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_computer_name_size "libevtx_record_t *record, size_t *utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_computer_name "libevtx_record_t *record, uint16_t *utf16_string, size_t utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_user_security_identifier_size "libevtx_record_t *record, size_t *utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_user_security_identifier "libevtx_record_t *record, uint8_t *utf8_string, size_t utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_user_security_identifier_size "libevtx_record_t *record, size_t *utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_user_security_identifier "libevtx_record_t *record, uint16_t *utf16_string, size_t utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_parse_data "libevtx_record_t *record, libevtx_template_definition_t *template_definition, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_number_of_strings "libevtx_record_t *record, int *number_of_strings, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_string_size "libevtx_record_t *record, int string_index, size_t *utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_string "libevtx_record_t *record, int string_index, uint8_t *utf8_string, size_t utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_string_size "libevtx_record_t *record, int string_index, size_t *utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_string "libevtx_record_t *record, int string_index, uint16_t *utf16_string, size_t utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_data_size "libevtx_record_t *record, size_t *data_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_data "libevtx_record_t *record, uint8_t *data, size_t data_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_xml_string_size "libevtx_record_t *record, size_t *utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf8_xml_string "libevtx_record_t *record, uint8_t *utf8_string, size_t utf8_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_xml_string_size "libevtx_record_t *record, size_t *utf16_string_size, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_record_get_utf16_xml_string "libevtx_record_t *record, uint16_t *utf16_string, size_t utf16_string_size, libevtx_error_t **error"
 .Sh DESCRIPTION
+.Pp
+Template definition
+.Ft int
+.Fn libevtx_template_definition_initialize "libevtx_template_definition_t **template_definition, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_template_definition_free "libevtx_template_definition_t **template_definition, libevtx_error_t **error"
+.Ft int
+.Fn libevtx_template_definition_set_data "libevtx_template_definition_t *template_definition, const uint8_t *data, size_t data_size, uint32_t data_offset, libevtx_error_t **error"
 The
 .Fn libevtx_get_version
 function is used to retrieve the library version.
