@@ -71,6 +71,10 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20130110
+* updated manuals
+* worked on pyevtx
+
 20130109
 * worked on pyevtx
 
